data/diff_tests/v8/br_table_StackCorruption_2089.wast
;; 9. **Test9: Incorrect Immediate Parameter Encoding**    - **Description:** Purposely misencode the immediate for `br_table`, either the label vector or the default label index, testing the system's reaction.    - **Stack Corruption Check:** Check if wrong encoding leads to stack corruptions or unintended operand behaviors.

(assert_malformed
  (module (func
    (block (br_table 0x10000001 0 (i32.const 1)))
  ))
  "unexpected token"
)